Dodanie endpointów update delete dla Product
